CSS declaration to correct the extra spacing appearing in the fieldset paragraph with IE (FF looked ok).

--- a/public_html/layout/professional/style.css
+++ b/public_html/layout/professional/style.css
@@ -53,6 +53,11 @@ a:active {
 fieldset {
   margin-bottom: 1ex;
 }
+fieldset p {
+  padding:5px;
+  margin:0px;
+}
+
 h1 {
   font-size: 125%;
 }
